# pyssg

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF-deploy-m1.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
adapters/pyssg-obsidian/: .gitignore  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css
adapters/pyssg-obsidian/example-vault/: Getting Started.md  index.md
adapters/pyssg-obsidian/src/: main.ts  process.ts  pyssg.ts  runtime.ts  settings.ts  view.ts
benchmarks/: README.md  __init__.py  __main__.py  generator.py  metrics.py  runner.py  scenarios.py  sizes.py  visualize.py
brand/: README.md  preview.html
docs/: README.md  pyssg.config.py
docs/assets/: style.css
docs/content/: contributing.md  index.md
docs/content/architecture/: hooks.md  index.md  kernel.md  lifecycle.md
docs/content/en/: index.md
docs/content/guide/: configuration.md  deploy.md  dev-server.md  getting-started.md  index.md
docs/content/plugins/: built-in.md  index.md  presets.md  writing-plugins.md
docs/content/templating/: index.md  inheritance.md  lookup-cascade.md  partials.md
docs/content/vi/: index.md
docs/layouts/: base.html
docs/layouts/_default/: list.html
docs/layouts/partials/: entry.html  prevnext.html  sidebar.html  topbar.html
pyssg/: __init__.py  __main__.py
pyssg/cli/: __init__.py  _exit.py  app.py  common.py  deploy.py  scaffold.py  serve.py
pyssg/cli/commands/: __init__.py  build.py  clean.py  deploy.py  new.py  serve.py
pyssg/config/: __init__.py
pyssg/contrib/: __init__.py  apidoc.py  external_links.py  graph.py  llms.py  obsidian.py  publish_gate.py
pyssg/contrib/_graph_assets/: graph.css  graph.js
pyssg/core/: build.py  builder.py  dependency.py  errors.py  graph.py  hook.py  node.py  phases.py  registry.py  scheduler.py  types.py
pyssg/core/incremental/: cache.py  depdiff.py  hashing.py  invalidation.py
pyssg/deploy/: __init__.py  _hash.py  _http.py  _output.py  base.py  cloudflare.py  github_pages.py  netlify.py  pipeline.py  state.py
pyssg/layout/: __init__.py
pyssg/plugins/: __init__.py  _context.py  api.py  asset_copy.py  collections.py  content_meta.py  directory_loader.py  frontmatter.py  highlight.py  i18n.py  link_resolver.py  markdown.py  mermaid.py  nav.py  permalink.py  render.py  rss.py  sitemap.py  taxonomy.py  transclude.py  wikilink.py
pyssg/presets/: __init__.py  _common.py  blog.py  docs.py  obsidian.py
pyssg/themes/: __init__.py
pyssg/themes/blog/: layout.toml
pyssg/themes/docs/: layout.toml
pyssg/watch/: __init__.py  events.py  ignore.py  watcher.py
recipes/deploy/: README.md
recipes/deploy/cloudflare-pages/: deploy.toml  deploy.yml
recipes/deploy/github-pages/: deploy.toml  deploy.yml
recipes/deploy/netlify/: deploy.toml  netlify.toml
src/pyssg/: __init__.py  build.py  builder.py  config.py  content.py  errors.py  hooks.py  models.py  plugin.py  schema.py
src/pyssg_cli/: __init__.py  cli.py  presets.py
src/pyssg_cli/scaffold/: __init__.py  generate.py  themes.py
src/pyssg_plugins/: __init__.py  broken_links.py  collections.py  dev_server.py  fingerprint.py  frontmatter.py  highlight.py  link_resolver.py  listing.py  markdown.py  markdown_page.py  minify.py  navigation.py  permalink.py  read_file.py  redirects.py  robots.py  rss.py  seo.py  sitemap.py  static_files.py  stats.py  template.py  wikilinks.py  write_file.py
tests/: _support.py  test_broken_links.py  test_builder.py  test_cli.py  test_collections.py  test_config.py  test_content_model.py  test_content_plugins.py  test_deploy_recipes.py  test_dev_server.py  test_errors.py  test_fingerprint.py  test_frontmatter.py  test_highlight.py  test_hooks.py  test_integration.py  test_io_plugins.py  test_link_resolver.py  test_listing.py  test_markdown_page.py  test_minify.py  test_navigation.py  test_package_layers.py  test_permalink.py  test_presets.py  test_redirects.py  test_robots.py  test_rss.py  test_scaffold.py  test_schema.py  test_seo.py  test_sitemap.py  test_static_files.py  test_stats.py  test_template_cascade.py  test_wikilinks.py
tests/fixtures/apidoc_pkg/: io_utils.py  mathx.py
tests/fixtures/blog_preset/: pyssg.config.py
tests/fixtures/blog_technical/: pyssg.config.py
tests/fixtures/blog_theme/: pyssg.config.py
tests/fixtures/custom/: pyssg.config.py
tests/fixtures/docs_min/: pyssg.config.py
tests/fixtures/docs_preset/: pyssg.config.py
tests/golden/: test_blog_minimal.py  test_blog_preset.py  test_blog_technical.py  test_blog_theme.py  test_custom.py  test_docs_min.py  test_docs_preset.py  test_docs_technical.py
tests/golden/blog_preset_expected/: feed.xml  index.html  sitemap.xml
tests/incremental/: test_cache_reuse.py  test_collections_incremental.py  test_features_incremental.py  test_incremental_equals_full.py
tests/integration/: test_cli_new.py  test_deploy_cli.py  test_example_vault.py  test_scaffold.py
tests/unit/: test_asset_copy.py  test_builder.py  test_cache.py  test_cli_json.py  test_collections.py  test_config.py  test_content_meta.py  test_contrib_apidoc.py  test_contrib_external_links.py  test_contrib_graph.py  test_contrib_llms.py  test_contrib_obsidian.py  test_contrib_publish_gate.py  test_core_boundary.py  test_depdiff.py  test_deploy_cloudflare.py  test_deploy_github_pages.py  test_deploy_hash.py  test_deploy_http.py  test_deploy_netlify.py  test_deploy_output.py  test_deploy_pipeline.py  test_deploy_registry.py  test_deploy_state.py  test_directory_loader.py  test_frontmatter.py  test_graph.py  test_hashing.py  test_highlight.py  test_hook.py  test_i18n.py  test_import_smoke.py  test_invalidation.py  test_layout.py  test_link_resolver.py  test_locale_routing.py  test_markdown.py  test_mermaid.py  test_node.py  test_presets.py  (+9 more)
themes/blog-technical/: layout.toml
(+171 files in other folders)
