[project]
name = "pyssg"
version = "0.1.0"
description = "Incremental static site generator for Markdown, with a Webpack-inspired hook + dependency-graph architecture."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "magiskboy" }]
keywords = ["static-site-generator", "ssg", "markdown", "jinja2", "plugin", "incremental"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    # Third-party libs live ONLY in peripheral built-in plugins / watch (SPEC 2.2, invariant 1).
    "markdown-it-py>=3.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pygments>=2.18",
    "pillow>=10.4",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/magiskboy/pyssg"
Repository = "https://github.com/magiskboy/pyssg"
Issues = "https://github.com/magiskboy/pyssg/issues"

[project.scripts]
pyssg = "pyssg.cli:main"

[dependency-groups]
dev = [
    "matplotlib>=3.9",
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
    "coverage>=7.6",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyssg"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["pyssg", "tests", "benchmarks"]

# Third-party libs without bundled type stubs: ignore missing imports at the boundary only.
[[tool.mypy.overrides]]
module = ["markdown_it.*", "watchdog.*", "PIL.*", "pygments.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["pyssg", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pyssg"]

# Coverage wraps the stdlib unittest runner; it is a dev-only tool and never a
# runtime dependency, so the kernel stays dependency-free. The fail_under gate
# lives here so local `coverage report` and CI enforce the same threshold.
[tool.coverage.run]
branch = true
source = ["pyssg"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
