[project]
name = "pyssg"
version = "0.3.0"
description = "Incremental static site generator for Markdown, with a Webpack-inspired hook + dependency-graph architecture."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "magiskboy" }]
keywords = ["static-site-generator", "ssg", "markdown", "jinja2", "plugin", "incremental"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pygments>=2.18",
    "pillow>=10.4",
    "watchdog>=4.0",
    "markdown>=3.10.2",
    "typer>=0.26.7",
]

[project.urls]
Homepage = "https://github.com/magiskboy/pyssg"
Repository = "https://github.com/magiskboy/pyssg"
Issues = "https://github.com/magiskboy/pyssg/issues"

[project.scripts]
pyssg = "pyssg.cli:main"

[project.optional-dependencies]
deploy = [
    "blake3>=0.4",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9",
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.15.16",
    "coverage>=7.6",
    "types-pyyaml>=6.0",
    "types-markdown>=3.10.2.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyssg"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["pyssg", "tests", "benchmarks"]

# Third-party libs without bundled type stubs: ignore missing imports at the boundary only.
[[tool.mypy.overrides]]
module = ["watchdog.*", "PIL.*", "pygments.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["pyssg", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pyssg"]

# Coverage wraps the stdlib unittest runner; it is a dev-only tool and never a
# runtime dependency, so the kernel stays dependency-free. The fail_under gate
# lives here so local `coverage report` and CI enforce the same threshold.
[tool.coverage.run]
branch = true
source = ["pyssg"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
